--- a/frontend/index.html
+++ b/frontend/index.html
@@ -342,11 +342,12 @@
                                     <thead class="table-dark">
                                         <tr>
                                             <th>Transaction ID</th>
-                                            <th>Type</th>
+                                            <th>Batch ID</th>
                                             <th>From Actor</th>
                                             <th>To Actor</th>
                                             <th>Quantity</th>
                                             <th>Total Amount</th>
+                                            <th>Payment Reference</th>
                                             <th>Date</th>
                                             <th>Status</th>
                                         </tr>
@@ -355,6 +356,32 @@
                                         <!-- Data will be loaded here -->
                                     </tbody>
                                 </table>
+                            </div>
+                            
+                            <!-- Solana Transaction IDs Table -->
+                            <div class="card mt-4">
+                                <div class="card-header d-flex justify-content-between align-items-center">
+                                    <h5><i class="fas fa-external-link-alt me-2"></i>Solana Transaction IDs</h5>
+                                    <small class="text-muted">Searchable on Solana Explorer</small>
+                                </div>
+                                <div class="card-body">
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-hover" id="solana-transactions-table">
+                                            <thead class="table-dark">
+                                                <tr>
+                                                    <th>Chain Transaction ID</th>
+                                                    <th>Solana Transaction Signature</th>
+                                                    <th>Block Time</th>
+                                                    <th>Status</th>
+                                                    <th>Explorer Link</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="solana-transactions-tbody">
+                                                <!-- Data will be loaded here -->
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -567,6 +594,28 @@
                     <button type="button" class="btn btn-primary" id="saveBtn">
                         <i class="fas fa-save me-2"></i>Save
                     </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Actor Information Modal -->
+    <div class="modal fade" id="actorInfoModal" tabindex="-1">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="actorModalTitle">
+                        <i class="fas fa-user me-2"></i>Actor Information
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="actorInfoContent">
+                        <!-- Actor information will be loaded here -->
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
