--- a/frontend/index.html
+++ b/frontend/index.html
@@ -384,9 +384,12 @@
                                 <table class="table table-striped table-hover" id="solana-transactions-table">
                                     <thead class="table-dark">
                                         <tr>
-                                            <th>Chain Transaction ID</th>
-                                            <th>Solana Transaction Signature</th>
-                                            <th>Block Time</th>
+                                            <th>Public Key</th>
+                                            <th>From Actor</th>
+                                            <th>To Actor</th>
+                                            <th>Quantity</th>
+                                            <th>Payment Method</th>
+                                            <th>Date</th>
                                             <th>Status</th>
                                             <th>Explorer Link</th>
                                         </tr>
