--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,11 +68,6 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-section="solana-transactions">
-                        <i class="fas fa-external-link-alt"></i> Solana Transactions
-                    </a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#" data-section="batch-tracker">
                         <i class="fas fa-search"></i> Batch Tracker
                     </a>
@@ -355,6 +350,7 @@
                                             <th>Moisture</th>
                                             <th>Date</th>
                                             <th>Status</th>
+                                            <th>Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody id="transactions-tbody">
@@ -367,41 +363,6 @@
                     </div>
                 </div>
 
-                <!-- Solana Transactions Section -->
-                <div id="solana-transactions-section" class="content-section" style="display: none;">
-                    <div class="card">
-                        <div class="card-header d-flex justify-content-between align-items-center">
-                            <h5><i class="fas fa-external-link-alt me-2"></i>Solana Transaction IDs</h5>
-                            <div>
-                                <input type="text" class="form-control d-inline-block" id="solana-transactions-search" placeholder="Search Solana transactions..." style="width: 200px;">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <div class="alert alert-info border-0" style="background-color: #e0f2fe; color: #01579b;">
-                                <i class="fas fa-info-circle me-2"></i> Solana blockchain transaction signatures - searchable on Solana Explorer
-                            </div>
-                            <div class="table-responsive">
-                                <table class="table table-striped table-hover" id="solana-transactions-table">
-                                    <thead class="table-dark">
-                                        <tr>
-                                            <th>Public Key</th>
-                                            <th>From Actor</th>
-                                            <th>To Actor</th>
-                                            <th>Quantity</th>
-                                            <th>Payment Method</th>
-                                            <th>Date</th>
-                                            <th>Status</th>
-                                            <th>Explorer Link</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="solana-transactions-tbody">
-                                        <!-- Data will be loaded here -->
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
                 <!-- API Tester Section -->
                 <div id="api-tester-section" class="content-section" style="display: none;">
