--- a/frontend/index.html
+++ b/frontend/index.html
@@ -350,6 +350,7 @@
                                             <th>Moisture</th>
                                             <th>Date</th>
                                             <th>Status</th>
+                                            <th>Data Format</th>
                                             <th>Actions</th>
                                         </tr>
                                     </thead>
@@ -393,6 +394,7 @@
                                             <option value="/api/rice-batches">Rice Batches</option>
                                             <option value="/api/milled-rice">Milled Rice</option>
                                             <option value="/api/transactions">Transactions</option>
+                                            <option value="/api/transactions/sample">Create Sample Transaction (POST)</option>
                                         </select>
                                     </div>
                                 </div>
