--- a/frontend/index.html
+++ b/frontend/index.html
@@ -357,6 +357,9 @@
                                 <button class="btn btn-sm btn-outline-secondary" id="filter-toggle-btn-header" type="button" title="Toggle Filters">
                                     <i class="fas fa-filter"></i>
                                 </button>
+                                <button class="btn btn-sm btn-outline-primary" onclick="loadChainTransactions()" type="button" title="Refresh Transactions">
+                                    <i class="fas fa-sync-alt"></i> Refresh
+                                </button>
                             </div>
                         </div>
                         <div class="card-body">
